# adult_matching

./: .dockerignore  .env.example  .env.local  .env.remote.example  .envrc  .gitignore  2025-11-10T09-02_export.csv  AGENT.md  AGENTS.md  CLAUDE.md  DMM_SETUP.md  GEMINI.md  Makefile  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PROJECT_COMPLETION_REPORT.md  PROJECT_STRUCTURE.md  README.md  SUPABASE_PRODUCTION_SETUP_GUIDE.md  batch_jobs.yaml  cookie_debug_page.html  current_videos.sql  debug_page.html  openapi.yaml  package-lock.json  package.json  pyproject.toml  simple_two_tower_test_results.json  training_components_test_results.json  ui_design.md
.serena/: project.yml
app/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
artifacts/: user_embeddings.parquet
backend/: .env.example  .gitignore  ARCHITECTURE.md  MIGRATION_SUMMARY.md  Makefile  README.md  STRUCTURE_REORGANIZATION.md  pytest.ini  test_results_unit.xml
data/: comprehensive_pseudo_users.json  dmm_reviews_2025-10-04.csv  dmm_reviews_videoa_2025-10-04.csv  interactions_train.parquet  interactions_val.parquet  pseudo_users_from_reviews.json
db-docs/: anomalies.html  columns.html  constraints.html  deletionOrder.txt  index.html  info-html.txt  insertionOrder.txt  orphans.html  relationships.html  routines.html  test_db.public.xml
docker/: compose.yml  frontend.dev.Dockerfile  kong.yml  ml.dev.Dockerfile  supabase.cli.Dockerfile
docs/: API_SPECIFICATION.md  architecture-overview.md  backend-architecture.md  batch_jobs.yaml  deployment_guide.md  developer-onboarding.md  dmm_genres.csv  docker.md  index.html  openapi.yaml  requirements.md  supabase-consistency-checker.md  system_test_report.md  ui_design.md  (+3 more)
(+1020 files in other folders)
