[project]
name = "adult-matching-two-tower"
version = "0.1.0"
description = "Two-Tower recommendation system for Adult Video Matching Application"
requires-python = ">=3.12"
dependencies = [
    "tensorflow>=2.16.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "psycopg2-binary>=2.9.0",
    "scipy>=1.10.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.13.5",
    "lxml>=6.0.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "psutil>=7.0.0",
    "tensorflowjs>=3.18.0",
    "aiohttp>=3.12.15",
    "asyncpg>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]
